First part of Bug #243680 --> Marking mails as "not junk" does not update training.dat / spam filter does not create that file at all.

No one was ever calling shutdown on the plugin so we never forced ourselves to save the training data
if it was dirty.

sr=bienvenu